[gd_scene load_steps=5 format=2]

[ext_resource path="res://codigos/enemy/enemy_template.gd" type="Script" id=1]
[ext_resource path="res://codigos/enemy/detection_area.gd" type="Script" id=2]
[ext_resource path="res://codigos/enemy/enemy_texture.gd" type="Script" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Area2D

class_name collision_area

onready var timer: Timer = get_node(\"Timer\")

export(int) var vida
export(float) var invencibilidade_tempo
export(NodePath) onready var enemy = get_node(enemy)




func _on_collision_area_area_entered(area):
	if area.get_parent() is Player:
		var status_player: Node = area.get_parent().get_node(\"stats_player\")
		var player_atack: int = status_player.ataque_basico + status_player.ataque_bonus
		update_vida(player_atack)

func update_vida(dano: int) -> void:
	vida -= dano
	if vida <= 0:
		enemy.pode_morrer = true
		return
	enemy.levou_dano = true
	enemy.player_procurado = true
	
"

[node name="enemy_template" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="texture" type="Sprite" parent="."]
script = ExtResource( 3 )
animation = NodePath("../animation")
enemy = NodePath("..")
ataque_area_collision = NodePath("../area_ataque_inimigo/collision")

[node name="collision" type="CollisionShape2D" parent="."]

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )
enemy = NodePath("..")

[node name="collision" type="CollisionShape2D" parent="detection_area"]

[node name="collision_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = SubResource( 1 )
enemy = NodePath("..")

[node name="collision" type="CollisionShape2D" parent="collision_area"]

[node name="Timer" type="Timer" parent="collision_area"]

[node name="area_ataque_inimigo" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="area_ataque_inimigo"]

[node name="animation" type="AnimationPlayer" parent="."]

[node name="floor_ray" type="RayCast2D" parent="."]

[connection signal="body_entered" from="detection_area" to="detection_area" method="on_body_entered"]
[connection signal="body_exited" from="detection_area" to="detection_area" method="on_body_exited"]
[connection signal="area_entered" from="collision_area" to="collision_area" method="_on_collision_area_area_entered"]
[connection signal="animation_finished" from="animation" to="texture" method="_on_animation_finished"]
